fix(global.css): Overflow iframe (#246)
* fix(global.css): Overflow iframe

* refactor(global.css): Linter auto fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -149,6 +149,10 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+	iframe {
+		width: 100%;
+		aspect-ratio: 16 / 9;
+	}
 }
 
 /* ------------- */
